# nimbushr

./: .gitignore  README.md
backend/: .env example  pyproject.toml
backend/app/: config.py  ingest.py  main.py  settings.py
backend/app/api/v1/routes/: files.py  query.py
backend/app/loaders/: pdf_loader.py
backend/app/rag/chunkers/: excel_processor.py  text_processor.py
backend/app/rag/graph/: entity_extractor.py  graph_retriever.py  hybrid_retriever.py  knowledge_graph.py
backend/app/rag/ingest/: ai_summarizer.py  content_analyzer.py  document_processor.py  ingest.py  ingest_pipeline.py  vector_store.py
backend/app/rag/loaders/: excel_loader.py  pdf_loader.py  text_loader.py
backend/app/rag/query/: query_engine.py  query_pipeline.py  streaming_query_engine.py  streaming_query_pipeline.py
backend/data/excels/: pricing_plans.xlsx
backend/data/pdfs/: employee_handbook.docx  engineering_guidelines.docx
backend/tests/: extract_metadata_test.py  simple_graph_test.py  test_streaming_client.py
docs/: commands.md  graphs.md  structure.md
frontend/: package.json  pnpm-lock.yaml
frontend/api/: files.ts  query.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Sources.tsx  app-sidebar.tsx  chat-area.tsx  chat-input.tsx  csv-viewer.tsx  document-panel.tsx  excel-viewer.tsx  graph-traversal.tsx  markdown-renderer.tsx  message-bubble.tsx  message-list.tsx  pdf-viewer.tsx  query-provider.tsx  text-viewer.tsx
frontend/hooks/: use-files.ts  use-streaming-query.ts
frontend/lib/: api.ts
frontend/types/: chat.ts  files.ts  query.ts
(+3 files in other folders)
