[project]
name = "NimbusHR"
version = "0.1.0"
description = "HR & People Management Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.1",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.8",
    "openai>=2.17.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
    "sentence-transformers>=5.2.2",
    "unstructured[pdf]>=0.18.31",
    "uvicorn>=0.40.0",
    "aiohttp>=3.9.0",
    "slowapi>=0.1.9",
]
